# watson

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
examples/: screener.py
src/watson/: logger.py  settings.py
src/watson/broker/: alpaca.py  broker.py
src/watson/core/: banner.py  database.py  loader.py  money_management.py  portfolio.py  scheduler.py  screener.py  strategy.py
src/watson/data/: earnings_calendar.py  market_data.py  symbols.py
src/watson/filters/: earnings.py  filters.py  indicators.py
tests/: test_logger.py  test_settings.py
